Shorter travel distance for arrow

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta property="og:type" content="music.song" />
 	<meta property="og:description" content="A free download of Sykur's new single, Strange Loop." />
 	<meta property="og:url" content="http://www.sykur.com" />
-	<meta property="og:image" content="assets/cover.jpg" />
+	<meta property="og:image" content="assets/cover.png" />
 
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link rel="stylesheet" type="text/css" href="arrow.css" />
@@ -24,8 +24,8 @@
 			<i class="icon-down"></i>
 		</div>
 		<div class="social-container">
-			<a href="https://twitter.com/sykurtheband" target="_blank" title="Twitter"><i class="icon-twitter-squared"></i></a>
-        	<a href="https://www.facebook.com/sykurtheband" target="_blank" title="Facebook"><i class="icon-facebook-squared"></i></a>
+			<a href="https://twitter.com/intent/user?screen_name=sykurtheband" target="_blank" title="Twitter"><i class="icon-twitter-squared"></i></a>
+        	<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.sykur.com&t=Sykur+::+Strange+Loop+::+Free+Download" target="_blank" title="Facebook"><i class="icon-facebook-squared"></i></a>
         	<a href="http://www.youtube.com/user/SykurTheBand" target="_blank" title="Youtube"><i class="icon-youtube-play"></i></a>
         	<a href="http://www.soundcloud.com/sykur" target="_blank" title="Soundcloud"><i class="icon-soundclowd"></i></a>
         </div>
