--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
 		<h2>LOOP</h2>-->
 		<object class="sucre" data="assets/sucre_web.svg" type="image/svg+xml">
 		</object>
-		<div class="circle" title="Download">
+		<h5>2014/10/27 12:00</h5>
+		<!--<div class="circle" title="Download">
 			<i class="icon-down"></i>
-		</div>
+		</div>-->
 		<div class="social-container">
-			<a href="https://twitter.com/intent/user?screen_name=sykurtheband" target="_blank" title="Twitter"><i class="icon-twitter-squared"></i></a>
-        	<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.sykur.com&t=Sykur+::+Strange+Loop+::+Free+Download" target="_blank" title="Facebook"><i class="icon-facebook-squared"></i></a>
-        	<a href="http://www.youtube.com/user/SykurTheBand" target="_blank" title="Youtube"><i class="icon-youtube-play"></i></a>
-        	<a href="http://www.soundcloud.com/sykur" target="_blank" title="Soundcloud"><i class="icon-soundclowd"></i></a>
+			<div class="wrapper">
+				<a href="https://twitter.com/intent/user?screen_name=sykurtheband" target="_blank" title="Twitter"><i class="icon-twitter-squared"></i></a>
+        		<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.sykur.com&t=Sykur+::+Strange+Loop+::+Free+Download" target="_blank" title="Facebook"><i class="icon-facebook-squared"></i></a>
+        		<a href="http://www.youtube.com/user/SykurTheBand" target="_blank" title="Youtube"><i class="icon-youtube-play"></i></a>
+        		<a href="http://www.soundcloud.com/sykur" target="_blank" title="Soundcloud"><i class="icon-soundclowd"></i></a>
+        	</div>
         </div>
 	</div>
 	<video autoplay loop muted poster="assets/sjor.png" id="bgvid">
