Changed og:title and og:description to not reflect what is about to happen

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<meta charset="utf-8" />
 	<title>SYKUR :: Strange Loop :: Free Download</title>
 
-	<meta property="og:title" content="SYKUR :: New Single :: Free Download" />
+	<meta property="og:title" content="SYKUR :: Strange Loop :: 2014/10/27" />
 	<meta property="og:type" content="music.song" />
-	<meta property="og:description" content="A free download of Sykur's new single, Strange Loop." />
+	<meta property="og:description" content="Sykur :: Strange Loop :: 2014/10/27" />
 	<meta property="og:url" content="http://www.sykur.com" />
 	<meta property="og:image" content="assets/cover.png" />
 
