Fixed some OG shit.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<meta charset="utf-8" />
 	<title>SYKUR :: Strange Loop :: Free Download</title>
 
-	<meta property="og:title" content="SYKUR :: Strange Loop :: 2014/10/27" />
+	<meta property="og:title" content="Sykur - Strange Loop ♫" />
 	<meta property="og:type" content="music.song" />
 	<meta property="og:description" content="Sykur :: Strange Loop :: 2014/10/27" />
-	<meta property="og:url" content="http://www.sykur.com" />
-	<meta property="og:image" content="assets/cover.png" />
+	<meta property="og:url" content="http://sykur.com" />
+	<meta property="og:image" content="http://sykur.com/assets/cover.jpg" />
 
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link rel="stylesheet" type="text/css" href="arrow.css" />
