--- a/index2.html
+++ b/index2.html
@@ -20,10 +20,9 @@
 		<h2>LOOP</h2>-->
 		<object class="sucre" data="assets/sucre_web.svg" type="image/svg+xml">
 		</object>
-		<h5>2014/10/27 12:00</h5>
-		<!--<div class="circle" title="Download">
+		<a class="circle" title="Download" href="media/Strange_Loop.zip" onclick="_gaq.push(['_trackEvent','Download','ZIP',this.href]);">
 			<i class="icon-down"></i>
-		</div>-->
+		</a>
 		<div class="social-container">
 			<div class="wrapper">
 				<a href="https://twitter.com/intent/user?screen_name=sykurtheband" target="_blank" title="Twitter"><i class="icon-twitter-squared"></i></a>
