Added webm version of video

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
 	</div>
 	<video autoplay loop muted poster="assets/sjor.png" id="bgvid">
+		<source src="assets/strange_loop_new_zilliddu.webm" type="video/webm">
 		<source src="assets/strange_loop_new_zilliddu.mp4" type="video/mp4">
 	</video>
 </body>
